Saving progress. Still need to polish the layout of the cards in the experience section. Make sure to also understand why the cards in the dialog are aligned perfectly. It's likely due to the flex property

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,6 @@ body {
   height: 100%;
   width: 100%;
   background-image: linear-gradient(180deg, #001433 0%, #121212 100%);
-  color: antiquewhite; /*Setting the default color for all fonts*/
 }
 
 /* Hide scrollbars by default */
