--- a/src/scss/Sections/contact.scss
+++ b/src/scss/Sections/contact.scss
@@ -1,6 +1,4 @@
 .contact-section {
-    width: 100%;
-    background-image: linear-gradient(180deg, #001433 0%, #121212 100%);
-    color: antiquewhite;
-  }
-  
+  width: 100%;
+  background-image: linear-gradient(180deg, #001433 0%, #121212 100%);
+}
